fix(a11y): contrast issues

--- a/src/app.css
+++ b/src/app.css
@@ -27,7 +27,8 @@
 
 		--accent: 0 0% 96.1%;
 		--accent-foreground: 0 0% 9%;
-		--accent-text: 220 77% 59%;
+		/* --accent-text: 220 77% 59%; */
+		--accent-text: 220 77% 49%;
 
 		--destructive: 0 72.2% 50.6%;
 		--destructive-foreground: 0 0% 98%;
